@@ -94,6 +94,24 @@ allprojects {
         ])
     }
 }
+
+tasks.withType(JavaCompile) {
+    targetCompatibility = 8
+    sourceCompatibility = JavaVersion.VERSION_16
+    options.encoding = "UTF-8"
+    options.compilerArgs += ["-Xlint:deprecation"]
+
+    options.forkOptions.jvmArgs.addAll([
+            '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+            '--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED'
+    ])
+}
 //needed for android build
 ext {
     //the build number that this mod is made for
